--- a/Kakuro/Kakuro.csproj
+++ b/Kakuro/Kakuro.csproj
@@ -119,6 +119,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include=".gitignore" />
     <Content Include="About.aspx" />
     <Content Include="App_Data\Kakuro.mdf" />
     <Content Include="App_Data\Kakuro_log.ldf">
@@ -241,8 +242,8 @@
     <Compile Include="Leaderboard.aspx.designer.cs">
       <DependentUpon>Leaderboard.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Model\KakuroCell.cs" />
-    <Compile Include="Model\KakuroGrid.cs" />
+    <Compile Include="Model\Cell.cs" />
+    <Compile Include="Model\Board.cs" />
     <Compile Include="Model\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Register.aspx.cs">
