--- a/Kakuro/Kakuro.csproj
+++ b/Kakuro/Kakuro.csproj
@@ -147,6 +147,7 @@
     <Content Include="Views\Default.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
+    <Content Include="Views\Home.aspx" />
     <Content Include="Views\Leaderboard.aspx" />
     <Content Include="Views\Login.aspx" />
     <Content Include="Views\Register.aspx" />
@@ -243,6 +244,13 @@
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Home.aspx.cs">
+      <DependentUpon>Home.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Home.aspx.designer.cs">
+      <DependentUpon>Home.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Leaderboard.aspx.cs">
       <DependentUpon>Leaderboard.aspx</DependentUpon>
